@@ -1,0 +1,21 @@
+# name log10
+# arg1 decimal
+# ret  decimal
+
+1                                          0
+0.1                                       -1
+0.01                                      -2
+0.001                                     -3
+10                                         1
+100                                        2
+1000                                       3
+1.1e-09                                   -8.958607314841774959249800028756976
+2.718281828459045235360287471352662        0.4342944819032518276511289189166051
+3.141592653589793238462643383279503        0.4971498726941338543512682882908989
+0.75                                      -0.1249387366082999531324498861938707
+
+NaN                                        NaN
+sNaN                                       NaN
+Inf                                        Inf
+0.0                                       -Inf
+-1.0                                       NaN
